# oumnix-minimal

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Oumnix: A Modular Architecture.md  README.md  SECURITY.md  main.py  mypy.ini  mypy_ui_memory.ini  pyproject.toml  pytest.ini  requirements.txt  test_train.py  train.py  train_simple.py  train_streaming.py
benchmarks/: bench_throughput.py  bench_vram_vs_seq.py
checkpoints/: train_config.txt
core/: analogy_engine.py  causal_engine.py  fp8_optimization.py  loss.py  metacognition.py  model.py  oumnix_ai.py  oumnix_minimal.py
memory/: advanced_consolidator.py  consolidator.py  episodic.py  infinity_window.py  persistence.py  short_term.py
neuro/: advanced_chemistry.py  chemistry.py
tests/: test_advanced_ui_formatters.py  test_analogy_and_causal_smokes.py  test_analogy_constraints_and_eval.py  test_attention_and_loss.py  test_attention_rag_parity.py  test_causal_engine_core.py  test_cell_flag_shapes.py  test_cli_envs_behavior.py  test_consolidator_ewc.py  test_dataset_and_memory.py  test_dataset_collate.py  test_early_exit_disabled_correctness.py  test_flags_behavior.py  test_flags_defaults.py  test_infinity_window_eviction.py  test_infinity_window_smoke.py  test_logging_and_metrics.py  test_logging_controls.py  test_memory_smokes.py  test_metrics_and_seeds.py  test_model_advanced_flags.py  test_model_islet_and_entropy.py  test_moop_and_rag.py  test_moop_parity_behavior.py  test_omnx_exporter_disabled.py  test_omnx_exporter_scrape.py  test_performance_smoke.py  (+17 more)
ui/: cli.py  (+3 more)
(+8 files in other folders)
